# research-repo-template

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  pages.yml
demo/: README.md  next.config.ts  package.json  pnpm-lock.yaml
demo/app/: globals.css  layout.tsx  page.tsx
demo/components/: abstract-section.tsx  citation-section.tsx  experiments-section.tsx  hero.tsx  methods-section.tsx  topbar.tsx
demo/data/: research-page.ts
demo/interfaces/: research-page.ts  review-job.ts
demo/lib/: github-pages.ts  review-api.ts
demo/styles/: globals.css
experiment/: README.md  pyproject.toml
experiment/configs/: baseline.toml
experiment/research_project/: __init__.py  config.py  environment.py  logging.py
experiment/research_project/analysis/: __init__.py  summarize_results.py
experiment/research_project/data/: loaders.py
experiment/research_project/evaluation/: __init__.py  evaluate_baseline.py  metrics.py
experiment/research_project/experiments/: run_baseline.py
experiment/tests/: test_baseline.py
manuscript/: README.md  conclusion.tex  experiments.tex  introduction.tex  macros.tex  main.tex  method.tex  references.bib
services/: README.md
services/review-api/: README.md
services/review-worker/: README.md
services/shared/: README.md  review-job.schema.json
