[project]
name = "research-project"
version = "0.1.0"
description = "Template experiment code for a computer science research project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.8.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
